package com.zx.strategy.improve;

public interface FlyBehavior {

	void fly(); // 子类具体实现
}