package com.zx.strategy.improve;

public interface QuackBehavior {
	void quack();//子类实现
}